{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 12,
  "lineage": "624c93bf-1d83-9ad1-e821-2f53f0c02499",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ni-block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm01",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcomerg-1/providers/Microsoft.Network/networkInterfaces/welcomeni1",
            "internal_domain_name_suffix": "4fu3iayp2whutmxzg44ab0jseg.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "welcomeip1",
                "primary": true,
                "private_ip_address": "10.1.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcomerg-1/providers/Microsoft.Network/publicIPAddresses/welcomepip1",
                "subnet_id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcomerg-1/providers/Microsoft.Network/virtualNetworks/welcome-vnet1/subnets/welcome-snet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "mac_address": "00-0D-3A-37-98-A4",
            "name": "welcomeni1",
            "private_ip_address": "10.1.0.4",
            "private_ip_addresses": [
              "10.1.0.4"
            ],
            "resource_group_name": "welcomerg-1",
            "virtual_machine_id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcomerg-1/providers/Microsoft.Compute/virtualMachines/welcomevm1"
          },
          "dependencies": [
            "azurerm_public_ip.pip-block",
            "azurerm_resource_group.rg-block",
            "azurerm_subnet.subnet-block",
            "azurerm_virtual_network.vnet-block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg-asso-block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm01",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcomerg-1/providers/Microsoft.Network/networkInterfaces/welcomeni1|/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcomerg-1/providers/Microsoft.Network/networkSecurityGroups/welcomensg1",
            "network_interface_id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcomerg-1/providers/Microsoft.Network/networkInterfaces/welcomeni1",
            "network_security_group_id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcomerg-1/providers/Microsoft.Network/networkSecurityGroups/welcomensg1"
          },
          "dependencies": [
            "azurerm_network_interface.ni-block",
            "azurerm_network_security_group.nsg-block",
            "azurerm_public_ip.pip-block",
            "azurerm_resource_group.rg-block",
            "azurerm_subnet.subnet-block",
            "azurerm_virtual_network.vnet-block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg-block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm01",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcomerg-1/providers/Microsoft.Network/networkSecurityGroups/welcomensg1",
            "location": "westus",
            "name": "welcomensg1",
            "resource_group_name": "welcomerg-1",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg-block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http_rule_vm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm01",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcomerg-1/providers/Microsoft.Network/networkSecurityGroups/welcomensg1/securityRules/welcomesec1",
            "name": "welcomesec1",
            "network_security_group_name": "welcomensg1",
            "priority": 103,
            "protocol": "*",
            "resource_group_name": "welcomerg-1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg-block",
            "azurerm_resource_group.rg-block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm01",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcomerg-1/providers/Microsoft.Network/publicIPAddresses/welcomepip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.73.55.172",
            "ip_version": "IPv4",
            "location": "westus",
            "name": "welcomepip1",
            "resource_group_name": "welcomerg-1",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg-block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm01",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcomerg-1/providers/Microsoft.Network/virtualNetworks/welcome-vnet1/subnets/welcome-snet1",
            "name": "welcome-snet1",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "welcomerg-1",
            "virtual_network_name": "welcome-vnet1"
          },
          "dependencies": [
            "azurerm_resource_group.rg-block",
            "azurerm_virtual_network.vnet-block"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-block",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "vm01",
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "03d469f1-e50f-498f-b2f9-37bc00e93226",
            "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcomerg-1/providers/Microsoft.Network/virtualNetworks/welcome-vnet1",
            "location": "westus",
            "name": "welcome-vnet1",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "welcomerg-1",
            "subnet": [
              {
                "address_prefixes": [
                  "10.1.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/233246a7-8523-487e-9a43-d155fcd332db/resourceGroups/welcomerg-1/providers/Microsoft.Network/virtualNetworks/welcome-vnet1/subnets/welcome-snet1",
                "name": "welcome-snet1",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg-block"
          ]
        }
      ]
    }
  ]
}